# gpgme

./: CMakeLists.txt  configure.ac
lang/: CMakeLists.txt
lang/cpp/src/: CMakeLists.txt  GpgmeppConfig-w32.cmake.in.in  Makefile.am  callbacks.cpp  data.h.in  editinteractor.cpp  global.h  gpgmepp_export.h  importresult.cpp  key.cpp  key.h
lang/cpp/src/interfaces/: dataprovider.h
lang/qt/src/: CMakeLists.txt  Makefile.am  QGpgmeConfig-w32.cmake.in.in  QGpgmeConfig.cmake  dataprovider.cpp  dataprovider.h  dn.cpp  downloadjob.h  encryptjob.h  qgpgme_export.h  signjob.h
src/: CMakeLists.txt
